# ice40-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: ftdi.rs  linux.rs
examples/stm32f411/: Cargo.toml  README.md  memory.x
examples/stm32f411/.cargo/: config.toml
examples/stm32f411/src/: main.rs
examples/stm32h743/: Cargo.toml  README.md  memory.x
examples/stm32h743/.cargo/: config.toml
examples/stm32h743/src/: main.rs
src/: lib.rs
