[package]
name = "ice40"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "An embedded-hal driver for configuration of ice40 FPGA devices."
repository = "https://github.com/Atmelfan/ice40-rs"
keywords = ["embedded", "driver", "embedded-hal", "ice40", "fpga"]
categories = ["embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
embedded-hal = { version = "0.2", features = ["unproven"] }

[dev-dependencies]
env_logger = "0.10"
structopt = { version = "0.3", default-features = false }
linux-embedded-hal = { version = "0.3", features = ["gpio_cdev"] }

[dev-dependencies.ftdi-embedded-hal]
version = "0.13.0"
features = ["libftd2xx-static"]

[dev-dependencies.libftd2xx]
version = "0.32"
# statically link the vendor library, defaults to dynamic if not set
# this will make things "just work" on Linux and Windows
features = ["static"]
