[package]
name = "ice40"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "An embedded-hal driver for configuration of ice40 FPGA devices."
repository = "https://github.com/Atmelfan/ice40-rs"
keywords = ["embedded", "driver", "embedded-hal", "ice40", "fpga"]
categories = ["embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
embedded-hal = "1.0"

[dev-dependencies]
env_logger = "0.11"
structopt = { version = "0.3", default-features = false }
linux-embedded-hal = "0.4"

[dev-dependencies.ftdi-embedded-hal]
version = "0.21.0"
features = ["libftd2xx-static"]

[dev-dependencies.libftd2xx]
version = "0.32"
# statically link the vendor library, defaults to dynamic if not set
# this will make things "just work" on Linux and Windows
features = ["static"]

[workspace]
members = ["examples/stm32f411", "examples/stm32h743"]
